2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (slot_lookup_rel): Don't take parameter type.  Pass
	-1 to lookup in its place.
	* server.c (server_loop): Update use of slot_lookup_rel to be
	consistent with new API.
	* t-as.c (try): Likewise.
	(test): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup): If a cappage is read-only, only bail if
	TYPE is not weak.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (ager_start): Increase the stack size.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.c (folio_object_alloc): Set CAP's policy to POLICY.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c (lookup): Don't update WRITABLE if the designated
	capability's type is strong but the requested type weak.  Consider
	the designated capability's type incompatible with the requested
	type if the former is weak and the latter strong.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* object.h (folio_object_alloc): Return a struct cap, not void.
	Remove the objectp parameter.  Update all users.
	* object.c (folio_object_alloc): Return a capability designating
	the new object.  Don't take a location in which to store the
	new object.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* thread.h (THREAD_WAIT_STATS): Define.
	* server.c (server_loop): Update implementation of activity_stats
	to handle the new parameter, until_period.  If the current period
	is less than UNTIL_PERIOD, queue the caller on PRINCIPAL and do
	not reply.
	* ager.c: Include "thread.h".
	(ager_loop): When generating an activity's statistics, if a thread
	is waiting for the statistic, send it reply.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): When we need a principal, use PRINCIPAL,
	not ACTIVITY.

2008-05-24  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_desc_claim): Fix debug statement, ACTIVITY may
	be NULL.

2008-05-24  Neal H. Walfield  <neal@gnu.org>
