@@ -1,5 +1,10 @@
 2008-05-28  Neal H. Walfield  <neal@gnu.org>
 
+	* pager.c (pager_collect): Don't just consider the first-level
+	activities, walk the activity hierarchy to find the victim.
+
+2008-05-28  Neal H. Walfield  <neal@gnu.org>
+
 	* cap-lookup.c (slot_lookup_rel): Don't take parameter type.  Pass
 	-1 to lookup in its place.
 	* server.c (server_loop): Update use of slot_lookup_rel to be
